--- a/index-beauty.html
+++ b/index-beauty.html
@@ -45,8 +45,8 @@
     <script type="text/javascript" src="js/modernizr-custom.min.js"></script>
 
     <!-- Favicons -->
-    <link rel="icon" href="img/logo-mini.png" type="image/x-icon">
-    <link rel="shortcut icon" href="img/logo-mini.png" type="image/x-icon">
+    <link rel="icon" href="img/logo-mini.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo-mini.jpeg" type="image/x-icon">
 
 </head>
 
@@ -94,7 +94,7 @@
         <div class="section-inner">
             <div class="table-container-outer container">
                 <div class="table-container-inner">
-                    <div data-0="transform[swing]:translateY(0px);opacity[swing]:1" data-250="transform[swing]:translateY(-50px);opacity[swing]:0">
+                    <div data-0="transform[swing]:translateY(0px);opacity[swing]:1" data-250="transform[swing]:translateY(-50px);opacity[swing]:1">
                         <div class="promo-shape">
                             <div class="shape-content shape-content-1">
                                  P.M.L.
@@ -110,12 +110,12 @@
                             </div>
                         </div>
                     </div>
-                   <h1 class="hero-header" data-150="transform[swing]:translateX(0px);opacity[swing]:1" data-550="transform[swing]:translateX(-25px);opacity[swing]:0">4° <strong class="main-color">Conto</strong></h1>
+                   
                     <h2 class="hero-subheader" data-200="transform[swing]:translateX(0px);opacity[swing]:1" data-500="transform[swing]:translateX(25px);opacity[swing]:0">Acidenes acontecem</h2>
-                    <div data-250="transform[swing]:translateY(0px);opacity[swing]:1" data-550="transform[swing]:translateY(-15px);opacity[swing]:0">
-                        <div class="divider">//</div>
+                    <div data-250="transform[swing]:translateY(0px);opacity[swing]:1" data-550="transform[swing]:translateY(-15px);opacity[swing]:5">
+                        <div class="divider">4° Conto</div>
                     </div>
-                    <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
+                    <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:5">
                         <p class="lead">Em 1993 no dia 15 de julho, em uma cidade pequena o tempo estava com um ar meio estranho, como se fosse acontecer algo. E de fato aconteceu.
                         No meio de uma avenida havia ocorrido um acidente que envolvia dois carros. Todas as pessoas estavam vivas, e o local estava cheio de reportes, bombeiros, ambulâncias e pessoas. Dentre essas pessoas estava Arthur um jovem de 19 anos muitíssimo curioso.
                         Ele estava chocado ao ver aquela cena, e queria que seus irmãos ou seus pais viessem ver aquilo.
@@ -128,18 +128,31 @@
                         Depois de um tempo internado no hospital, Arthur teve uma pneumonia muito forte. E ficou mais tempo internado. 
                         Quando finalmente saiu do hospital, Arthur teve que fazer várias sessões de fisioterapia para a mão e hoje em dia Arthur é um ótimo mecânico e tem uma família muito linda.
 </p>
-                    </div>
-                    <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
+                     <div class="divider">Nos ajude respondendo uma breve pesquisa :) <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTCEoNJlr45POiy-LJQWaFJatZV8mMW4zCzPqiTh9RaT5k6Q/viewform?usp=pp_url" target="-blank>"> _clique aqui em cima. </a>
+         </div>
+
+<div>
+
+
+
+                    <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:5">
                         <li>
-                            <a href="https://github.com/kwarc87" class="icon-circle-container" title="GitHub">
-                                <i class="fa fa-github"></i>
-                            </a>
+                            <a href="https://github.com/projetomariletiped" class="icon-circle-container">
+                            <i class="fa fa-github"></i>
+                        </a>
                         </li>
                     </ul>
 
 
                 </div>
             </div>
+
+             <div id="to-top" class="to-top">
+        <a href="#" class="To the top" title="To the top">
+            <i class="fa fa-angle-up"></i>
+        </a>
+    </div>
+</div>
 
              <div id="to-top" class="to-top">
         <a href="#" class="To the top" title="To the top">
