--- a/index-culinary.html
+++ b/index-culinary.html
@@ -45,8 +45,8 @@
     <script type="text/javascript" src="js/modernizr-custom.min.js"></script>
 
     <!-- Favicons -->
-    <link rel="icon" href="img/logo-mini.png" type="image/x-icon">
-    <link rel="shortcut icon" href="img/logo-mini.png" type="image/x-icon">
+    <link rel="icon" href="img/logo-mini.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo-mini.jpeg" type="image/x-icon">
 
 </head>
 
@@ -94,7 +94,7 @@
         <div class="section-inner">
             <div class="table-container-outer container">
                 <div class="table-container-inner">
-                    <div data-0="transform[swing]:translateY(0px);opacity[swing]:1" data-250="transform[swing]:translateY(-50px);opacity[swing]:0">
+                    <div data-0="transform[swing]:translateY(0px);opacity[swing]:1" data-250="transform[swing]:translateY(-50px);opacity[swing]:1">
                         <div class="promo-shape">
                             <div class="shape-content shape-content-1">
                                  P.M.L.
@@ -110,12 +110,12 @@
                             </div>
                         </div>
                     </div>
-                    <h1 class="hero-header" data-150="transform[swing]:translateX(0px);opacity[swing]:1" data-550="transform[swing]:translateX(-25px);opacity[swing]:0">6° <strong class="main-color">Conto</strong></h1>
-                    <h2 class="hero-subheader" data-200="transform[swing]:translateX(0px);opacity[swing]:1" data-500="transform[swing]:translateX(25px);opacity[swing]:0">Tudo Inesperado</h2>
+                    
+                    <h2 class="hero-subheader" data-200="transform[swing]:translateX(0px);opacity[swing]:5" data-500="transform[swing]:translateX(25px);opacity[swing]:0">Tudo Inesperado</h2>
                     <div data-250="transform[swing]:translateY(0px);opacity[swing]:1" data-550="transform[swing]:translateY(-15px);opacity[swing]:0">
-                        <div class="divider">//</div>
+                        <div class="divider">6° Conto</div>
                     </div>
-                    <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
+                    <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:5">
                         <p class="lead">Dia 1/01/2020,Ano Novo
                             Fogos de artifícios, pessoas sorrindo, abraços, música, festa, eu estava ansiosa pelo que esse ano iria me trazer, sonhos e metas na minha cabeça, era o momento em que tudo mudaria para melhor, foi o que pensei.
                             Desde pequena eu me imaginava no futuro, estudando, com minha própria casa, trabalhando dando o meu melhor para garantir uma vida de conforto. Sempre me esforcei para conseguir aquilo que eu desejava; nunca fui de fazer amizade, nunca me encaixei em grupos e isso me fez uma criança solitária, por causa disso comecei a ter dificuldades para falar com pessoas, mas em compensação eu ocupava meu tempo lendo e escrevendo, imaginando a minha vida, planejando cada detalhe, isso me fez amadurecer mais rápido do que as pessoas da minha idade
@@ -128,17 +128,31 @@
                             Ainda tenho muitas coisas para melhorar e faz parte do processo reconhecer as nossas falhas para podermos mudar nossos hábitos.
                             Eu ainda continuo planejando meu futuro e essa quarentena começou a motivar mais a continuar lutando para alcançar meus sonhos.
 </p>
-                    </div>
-                    <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
+                    <div class="divider">Nos ajude respondendo uma breve pesquisa :) <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTCEoNJlr45POiy-LJQWaFJatZV8mMW4zCzPqiTh9RaT5k6Q/viewform?usp=pp_url" target="-blank>"> _clique aqui em cima. </a>
+         </div>
+
+<div>
+
+
+
+                    <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:5" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
                         <li>
                             <a href="https://github.com/projetomariletiped" class="icon-circle-container">
                             <i class="fa fa-github"></i>
-                        </a> 
+                        </a>
                         </li>
                     </ul>
 
 
                 </div>
+            </div>
+
+             <div id="to-top" class="to-top">
+        <a href="#" class="To the top" title="To the top">
+            <i class="fa fa-angle-up"></i>
+        </a>
+    </div>
+</div>
             </div>
 
              <div id="to-top" class="to-top">
