--- a/index-dark.html
+++ b/index-dark.html
@@ -45,8 +45,8 @@
     <script type="text/javascript" src="js/modernizr-custom.min.js"></script>
 
     <!-- Favicons -->
-    <link rel="icon" href="img/logo-mini.png" type="image/x-icon">
-    <link rel="shortcut icon" href="img/logo-mini.png" type="image/x-icon">
+    <link rel="icon" href="img/logo-mini.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo-mini.jpeg" type="image/x-icon">
 
 </head>
 
@@ -94,7 +94,7 @@
         <div class="section-inner">
             <div class="table-container-outer container">
                 <div class="table-container-inner">
-                    <div data-0="transform[swing]:translateY(0px);opacity[swing]:1" data-250="transform[swing]:translateY(-50px);opacity[swing]:0">
+                    <div data-0="transform[swing]:translateY(0px);opacity[swing]:1" data-250="transform[swing]:translateY(-50px);opacity[swing]:1">
                         <div class="promo-shape">
                             <div class="shape-content shape-content-1">
                                  P.M.L.
@@ -110,12 +110,12 @@
                             </div>
                         </div>
                     </div>
-                   <h1 class="hero-header" data-150="transform[swing]:translateX(0px);opacity[swing]:1" data-550="transform[swing]:translateX(-25px);opacity[swing]:0">3° <strong class="main-color">Conto</strong></h1>
-                    <h2 class="hero-subheader" data-200="transform[swing]:translateX(0px);opacity[swing]:1" data-500="transform[swing]:translateX(25px);opacity[swing]:0">A Vida de uma nova motorista</h2>
-                    <div data-250="transform[swing]:translateY(0px);opacity[swing]:1" data-550="transform[swing]:translateY(-15px);opacity[swing]:0">
-                        <div class="divider">//</div>
+                   
+                    <h2 class="hero-subheader" data-200="transform[swing]:translateX(0px);opacity[swing]:1" data-500="transform[swing]:translateX(25px);opacity[swing]:5">A Vida de uma nova motorista</h2>
+                    <div data-250="transform[swing]:translateY(0px);opacity[swing]:1" data-550="transform[swing]:translateY(-15px);opacity[swing]:5">
+                        <div class="divider">3° Conto</div>
                     </div>
-                    <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
+                    <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:5">
                         <p class="lead">O ano era 1996, quando uma motorista chamada Elaine consegue seu primeiro carro, um fusca vermelho, com toda a documentação pronta. Elaine com muito entusiasmo e motivação vai se aventurar em sua primeira viagem pelo bairro para estrear seu novo carro e sua nova carteira, junto a suas três amigas:
                         Fernanda sua amiga mais próxima, quase uma irmã e a mais corajosa, sentou-se no banco da frente de imediato. 
                         Cristina sua irmã mais nova, medrosa se sentou no banco de trás.
@@ -126,12 +126,18 @@
                         Depois de uns vinte minutos na tentativa de subir de ré, Elaine conseguiu ter o impulso para que o carro tivesse força para subir a rua. Ao terminar de subir a rua, Elaine respirou fundo e chamou suas duas amigas para entrar no carro novamente, as duas muitíssimos assustadas, entraram e pediram para levarem para suas casas.
                         Todas moravam na mesma rua, quase uma do lado da outra, e enquanto Elaine deixava suas amigas em casa, as mães delas se questionam o que havia acontecido, pois todas voltaram amareladas e mulatíssimas tensas. E Elaine dizia que essa viagem mostrou a vida de uma nova motorista.
 </p>
-                    </div>
-                    <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
+                     <div class="divider">Nos ajude respondendo uma breve pesquisa :) <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTCEoNJlr45POiy-LJQWaFJatZV8mMW4zCzPqiTh9RaT5k6Q/viewform?usp=pp_url" target="-blank>"> _clique aqui em cima. </a>
+         </div>
+
+<div>
+
+
+
+                    <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:5">
                         <li>
-                            <a href="https://github.com/kwarc87" class="icon-circle-container" title="GitHub">
-                                <i class="fa fa-github"></i>
-                            </a>
+                            <a href="https://github.com/projetomariletiped" class="icon-circle-container">
+                            <i class="fa fa-github"></i>
+                        </a>
                         </li>
                     </ul>
 
@@ -144,6 +150,7 @@
             <i class="fa fa-angle-up"></i>
         </a>
     </div>
+</div>
 
 
     <!-- jQuery -->
