--- a/index-default.html
+++ b/index-default.html
@@ -45,8 +45,8 @@
     <script type="text/javascript" src="js/modernizr-custom.min.js"></script>
 
     <!-- Favicons -->
-    <link rel="icon" href="img/logo-mini.png" type="image/x-icon">
-    <link rel="shortcut icon" href="img/logo-mini.png" type="image/x-icon">
+    <link rel="icon" href="img/logo-mini.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo-mini.jpeg" type="image/x-icon">
 
 </head>
 
@@ -94,7 +94,7 @@
         <div class="section-inner">
             <div class="table-container-outer container">
                 <div class="table-container-inner">
-                    <div data-0="transform[swing]:translateY(0px);opacity[swing]:1" data-250="transform[swing]:translateY(-50px);opacity[swing]:0">
+                    <div data-0="transform[swing]:translateY(0px);opacity[swing]:1" data-250="transform[swing]:translateY(-50px);opacity[swing]:1">
                         <div class="promo-shape">
                             <div class="shape-content shape-content-1">
                                 P.M.L.
@@ -110,18 +110,28 @@
                             </div>
                         </div>
                     </div>
-                    <h1 class="hero-header" data-150="transform[swing]:translateX(0px);opacity[swing]:1" data-550="transform[swing]:translateX(-25px);opacity[swing]:0">1° <strong class="main-color">Conto</strong></h1>
+                    
                     <h2 class="hero-subheader" data-200="transform[swing]:translateX(0px);opacity[swing]:1" data-500="transform[swing]:translateX(25px);opacity[swing]:0">Familia of dreams</h2>
-                    <div data-250="transform[swing]:translateY(0px);opacity[swing]:1" data-550="transform[swing]:translateY(-15px);opacity[swing]:0">
-                        <div class="divider">//</div>
+                    <div data-250="transform[swing]:translateY(0px);opacity[swing]:1" data-550="transform[swing]:translateY(-15px);opacity[swing]:5">
+                        <div class="divider">1° Conto</div>
                     </div>
-                    <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
+
+                    <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:5">
                         <p class="lead"> Antigamente entre 1980 a 2021, era uma família muito nobre formada por, pais e 5 filhos, nós morávamos todos juntos em um sítio no interior, morávamos em uma casa muito simples bem longe da cidade e sempre fomos bem carentes, não existia energia elétrica, não tinha água encanada muito menos uma escola para ensino básico no sitio, para ir para a cidade estudar tínhamos que ir a cavalo, foi mais de 7 anos assim até que eu possa ter terminado o 8° ano, mas nada nos deixaria ficar menos feliz. 
                          Ao completar 17 anos de idade, conheci um garoto em uma festa onde ele mudou minha vida por completa, começamos a namorar, namoramos por aproximadamente 4 anos, casamos, após 1 ano casados ele se mudou para São Paulo a procura de trabalho, passou menos de um mês eu decidi que também iria morar com ele em São Paulo, nosso sonho desde quando casamos seria ter dois filhos uma homem e uma mulher, mas por complicações não conseguir ter filho por 7 anos até que chegou o meu primeiro filho(Francisco) e por conta de ser uma gravides de risco ele nasceu prematuro de 7 meses, em menos de um anos do nascimento do meu primeiro filho descobrimos que eu estava grávida novamente do meu segundo filho(kauê) achávamos que fosse mulher mas não foi, depois de 1 ano e 5 meses eu e meu esposo decidimos que teríamos outro filho(Pedro) ao tentar que fosse mulher, mas também não tinha sido dessa vez e acabamos decidido que seria o nosso último filho, e no final acabou que tivemos 3 filhos homens, e vivemos muitos felizes. 
                         </p>
-                    </div>
+                
 
-                    <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
+
+                    </div>
+                    <div class="divider">Nos ajude respondendo uma breve pesquisa :) <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTCEoNJlr45POiy-LJQWaFJatZV8mMW4zCzPqiTh9RaT5k6Q/viewform?usp=pp_url" target="-blank>"> _clique aqui em cima. </a>
+         </div>
+
+<div>
+
+
+
+                    <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:5">
                         <li>
                             <a href="https://github.com/projetomariletiped" class="icon-circle-container">
                             <i class="fa fa-github"></i>
@@ -138,6 +148,7 @@
             <i class="fa fa-angle-up"></i>
         </a>
     </div>
+</div>
 
 
     <!-- jQuery -->
