--- a/index-light.html
+++ b/index-light.html
@@ -45,8 +45,8 @@
     <script type="text/javascript" src="js/modernizr-custom.min.js"></script>
 
     <!-- Favicons -->
-    <link rel="icon" href="img/logo-mini.png" type="image/x-icon">
-    <link rel="shortcut icon" href="img/logo-mini.png" type="image/x-icon">
+    <link rel="icon" href="img/logo-mini.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo-mini.jpeg" type="image/x-icon">
 
 </head>
 
@@ -94,7 +94,7 @@
         <div class="section-inner">
             <div class="table-container-outer container">
                 <div class="table-container-inner">
-                    <div data-0="transform[swing]:translateY(0px);opacity[swing]:1" data-250="transform[swing]:translateY(-50px);opacity[swing]:0">
+                    <div data-0="transform[swing]:translateY(0px);opacity[swing]:1" data-250="transform[swing]:translateY(-50px);opacity[swing]:1">
                         <div class="promo-shape">
                             <div class="shape-content shape-content-1">
                                  P.M.L.
@@ -110,12 +110,12 @@
                             </div>
                         </div>
                     </div>
-                    <h1 class="hero-header" data-150="transform[swing]:translateX(0px);opacity[swing]:1" data-550="transform[swing]:translateX(-25px);opacity[swing]:0">2° <strong class="main-color">Conto</strong></h1>
-                    <h2 class="hero-subheader" data-200="transform[swing]:translateX(0px);opacity[swing]:1" data-500="transform[swing]:translateX(25px);opacity[swing]:0">Tudo Por Conta De Uma Pandemia</h2>
-                    <div data-250="transform[swing]:translateY(0px);opacity[swing]:1" data-550="transform[swing]:translateY(-15px);opacity[swing]:0">
-                        <div class="divider">//</div>
+                    
+                    <h2 class="hero-subheader" data-200="transform[swing]:translateX(0px);opacity[swing]:1" data-500="transform[swing]:translateX(25px);opacity[swing]:5">Tudo Por Conta De Uma Pandemia</h2>
+                    <div data-250="transform[swing]:translateY(0px);opacity[swing]:1" data-550="transform[swing]:translateY(-15px);opacity[swing]:5">
+                        <div class="divider">2° Conto</div>
                     </div>
-                    <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
+                    <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:5">
                         <p class="lead"> Tudo começou em 2020 no dia 16 de março em uma plena segunda-feira onde fomos avisados em que estávamos entrando em uma pandemia, mas poucos fazia questão de saber sobre o que se tratava e pensava que seria apenas um simples recesso de 15 dias que aliás hoje dia 11 do mês de junho do ano de 2021 faz exatamente 452 dias do início "da pandemia", um pouco mais que 1 ano e a partir desse momento foi onde começou a mostrar a verdadeira identidade do civid-19 em que o Brasil chega a 482.019 mortes em 17.210.969 casos confirmados (atualizado em 10 Junho 2021), E nesse meio tempo em que uma pessoa que chega a óbito e não tem direito a um simples velório ou então ao se despedir dos seus entes queridos. 
                         Não temos nem se quer um prazo para o término dessa quarentena estamos sem ideia do que está por vir, não sabemos como dizer, não sabemos como me expressar, não conseguimos imaginar assim, as pessoas infelizmente têm um ciclo na vida para seguir... 
                         Então, por mais que dentro esteja uma bagunça, nosso exterior vai continuar pleno. E de repente parece que o mundo está desabando bem debaixo dos nossos olhos. O primeiro sentimento é o desespero, Muitas vezes nos sentimos sem saída, nos perdemos no caminho e parecemos atolados em problemas. 
@@ -128,8 +128,14 @@
  
  
  </p>
-                    </div>
-                    <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
+                    <div class="divider">Nos ajude respondendo uma breve pesquisa :) <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTCEoNJlr45POiy-LJQWaFJatZV8mMW4zCzPqiTh9RaT5k6Q/viewform?usp=pp_url" target="-blank>"> _clique aqui em cima. </a>
+         </div>
+
+<div>
+
+
+
+                    <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:5">
                         <li>
                             <a href="https://github.com/projetomariletiped" class="icon-circle-container">
                             <i class="fa fa-github"></i>
@@ -146,6 +152,7 @@
             <i class="fa fa-angle-up"></i>
         </a>
     </div>
+</div>
 
 
     <!-- jQuery -->
