--- a/index-medical.html
+++ b/index-medical.html
@@ -45,8 +45,8 @@
     <script type="text/javascript" src="js/modernizr-custom.min.js"></script>
 
     <!-- Favicons -->
-    <link rel="icon" href="img/logo-mini.png" type="image/x-icon">
-    <link rel="shortcut icon" href="img/logo-mini.png" type="image/x-icon">
+    <link rel="icon" href="img/logo-mini.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo-mini.jpeg" type="image/x-icon">
 
 </head>
 
@@ -94,7 +94,7 @@
         <div class="section-inner">
             <div class="table-container-outer container">
                 <div class="table-container-inner">
-                    <div data-0="transform[swing]:translateY(0px);opacity[swing]:1" data-250="transform[swing]:translateY(-50px);opacity[swing]:0">
+                    <div data-0="transform[swing]:translateY(0px);opacity[swing]:1" data-250="transform[swing]:translateY(-50px);opacity[swing]:1">
                         <div class="promo-shape">
                             <div class="shape-content shape-content-1">
                                  P.M.L.
@@ -110,25 +110,27 @@
                             </div>
                         </div>
                     </div>
-                   <h1 class="hero-header" data-150="transform[swing]:translateX(0px);opacity[swing]:1" data-550="transform[swing]:translateX(-25px);opacity[swing]:0">5° <strong class="main-color">Conto</strong></h1>
-                    <h2 class="hero-subheader" data-200="transform[swing]:translateX(0px);opacity[swing]:1" data-500="transform[swing]:translateX(25px);opacity[swing]:0">Familia</h2>
+                   
+                    <h2 class="hero-subheader" data-200="transform[swing]:translateX(0px);opacity[swing]:5" data-500="transform[swing]:translateX(25px);opacity[swing]:0">Familia</h2>
                     <div data-250="transform[swing]:translateY(0px);opacity[swing]:1" data-550="transform[swing]:translateY(-15px);opacity[swing]:0">
-                        <div class="divider">//</div>
+                        <div class="divider">5° Conto</div>
                     </div>
-                    <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:0">
+                    <div data-350="transform[swing]:translateY(0px);opacity[swing]:1" data-650="transform[swing]:translateY(-15px);opacity[swing]:5">
                         <p class="lead">Apesar dessa quarentena ter sido para conter o vírus, querendo ou não me trouxe mais perto da minha família já que eles trabalhavam muito e eu quase não os via.
                         Minha mãe trabalha de manhã até a tarde e a noite ela faz faculdade, nem sempre ela tem tempo para conversar comigo, mas se esforçar em separar um momento com sua família, a mesma coisa com minha irmã, faz faculdade de manhã e trabalha de tarde até a noite. Quando todos estão livres fazemos sempre alguma novidade em família, mas em especial os almoços em família são os melhores.
                         Sinto saudades de poder ver a família inteira se reunindo, conversando, brincando, é uma sensação boa. Acho que a melhor parte dessas reuniões é brincar com meus primos, quando éramos menores adorávamos aprontar.
                         Quando éramos menores descobrimos que minha avó tinha medo de cobras e aproveitamos que tínhamos cobras de brinquedo para assustar ela, embrulhamos tudo em um saco de presente e convencemos meu primo de 2 anos a entregar para minha vó. Nós passamos dos limites, quando ela abriu o saco ela deu um grito enorme muito assustada, eu e meus primos rimos muito, mas nossos pais não gostaram nenhum um pouco. Passamos a tarde assustando-a com os brinquedos, no fundo fiquei com um pouco de dó, mas era engraçado ao mesmo tempo, no final recebemos uma bronca dos pais pela brincadeira e até hoje minha vó fica brava em lembrar sobre a brincadeira.
 </p>
-                    </div>
-                    <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:0">
+                     <div class="divider">Nos ajude respondendo uma breve pesquisa :) <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTCEoNJlr45POiy-LJQWaFJatZV8mMW4zCzPqiTh9RaT5k6Q/viewform?usp=pp_url" target="-blank>"> _clique aqui em cima. </a>
+         </div>
+
+<div>
+
+
+
+                    <ul class="list-inline icons-list-square" data-400="transform[swing]:translateY(0px);opacity[swing]:1" data-750="transform[swing]:translateY(-15px);opacity[swing]:5">
                         <li>
-                            <a href="https://github.com/kwarc87" class="icon-circle-container" title="GitHub">
-                                <i class="fa fa-github"></i>
-                            </a>
-                        </li><li>
-                           <a href="https://github.com/projetomariletiped" class="icon-circle-container">
+                            <a href="https://github.com/projetomariletiped" class="icon-circle-container">
                             <i class="fa fa-github"></i>
                         </a>
                         </li>
@@ -136,6 +138,14 @@
 
 
                 </div>
+            </div>
+
+             <div id="to-top" class="to-top">
+        <a href="#" class="To the top" title="To the top">
+            <i class="fa fa-angle-up"></i>
+        </a>
+    </div>
+</div>
             </div>
 
              <div id="to-top" class="to-top">
